# DobyteTest

./: .gitignore  CMakeLists.txt  README.md  build.bat
resources/: APP_ICON.rc
sources/: main.cpp  sums.cpp  sums.h  tosts.cpp  tosts.h
